# rusqlite

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: lib.rs
libsqlite3-sys/: Cargo.toml  build.rs
libsqlite3-sys/bindgen-bindings/: bindgen_3.7.10.rs
libsqlite3-sys/src/: lib.rs
rusqlite-macros/: Cargo.toml
rusqlite-macros/src/: lib.rs
rusqlite-macros/tests/: test.rs
rusqlite-macros/tests/compile-fail/: bad-sql-syntax.rs
src/: blob.rs  cache.rs  functions.rs  lib.rs  named_params.rs  trace.rs  transaction.rs  types.rs
src/types/: mod.rs  serde_json.rs  value_ref.rs
src/vtab/: mod.rs
