[package]
name = "rusqlite"
version = "0.4.0"
authors = ["John Gallagher <jgallagher@bignerdranch.com>"]
description = "Ergonomic wrapper for SQLite"
repository = "https://github.com/jgallagher/rusqlite"
documentation = "http://jgallagher.github.io/rusqlite/rusqlite/index.html"
readme = "README.md"
keywords = ["sqlite", "database", "ffi"]
license = "MIT"

[lib]
name = "rusqlite"

[features]
load_extension = ["libsqlite3-sys/load_extension"]
trace = []
backup = []
blob = []
named_params = []
cache = ["lru-cache"]

[dependencies]
time = "~0.1.34"
bitflags = "~0.3.2"
libc = "~0.2.2"

[dev-dependencies]
tempdir = "~0.3.4"
lazy_static = "~0.1"

[dependencies.libsqlite3-sys]
path = "libsqlite3-sys"
version = "0.2.0"

[dependencies.lru-cache]
version = "~0.0.4"
optional = true

[[test]]
name = "config_log"
harness = false
